# terraform-aws-default-log-retention

./: .gitignore  .releaserc.yml  .tarpaulin.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  rustfmt.toml  tf-alarm-topic.tf  tf-alarms.tf  tf-cloudwatch-logs.tf  tf-global-retention-setter.tf  tf-inputs.tf  tf-lambda-iam-role.tf  tf-locals.tf  tf-log-retention-lambda.tf  tf-lookups.tf  tf-security-group.tf
.github/workflows/: cla.yml  codeql-analysis.yml  git-ci.yml  mainandtag.yml
scripts/: build-release.sh  coverage.sh  pre-commit.sh  test.sh
signatures/version1/: cla.json
src/: cloudwatch_logs_traits.rs  cloudwatch_metrics_traits.rs  error.rs  event.rs  global.rs  lib.rs  main.rs  metric_publisher.rs  retention_setter.rs
src/snapshots/: terraform_aws_default_log_retention__global__tests__cw_logs_client.snap  terraform_aws_default_log_retention__global__tests__cw_metrics_client.snap  terraform_aws_default_log_retention__metric_publisher__tests__CWMetricCall.snap  terraform_aws_default_log_retention__tests__CWMetricCall_process_event_do_not_overwrite_when_retention_tag_set.snap  terraform_aws_default_log_retention__tests__CWMetricCall_process_event_fails_when_tag_log_group_fails.snap  terraform_aws_default_log_retention__tests__CWMetricCall_process_event_retention_already_set.snap  terraform_aws_default_log_retention__tests__parse_event_fail.snap  terraform_aws_default_log_retention__tests__process_event_bad_input.snap  terraform_aws_default_log_retention__tests__process_event_do_not_overwrite_when_retention_tag_set.snap  terraform_aws_default_log_retention__tests__process_event_fails_when_put_retention_policy_fails.snap  terraform_aws_default_log_retention__tests__process_event_retention_already_set.snap  terraform_aws_default_log_retention__tests__process_event_success_no_tags.snap  terraform_aws_default_log_retention__tests__process_event_success_no_tags_different_aws_partition.snap
