# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "terraform-aws-default-log-retention"
authors = ["Clete Blackwell II <clete.blackwell.m9ox@statefarm.com>"]
version = "1.0.0"
edition = "2021"
default-run = "terraform-aws-default-log-retention"

[profile.release-lambda]
inherits = "release"
lto = true # https://doc.rust-lang.org/cargo/reference/profiles.html#lto Big difference in binary size with a similarly-large impact to compile time.
codegen-units = 1 # This is pretty extreme; eliminates parallel compilation. Makes a difference in binary size.

[dependencies]
tokio = { version = "1.34", features = ["macros"] }
log = "0.4"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# NOTE: the following crate is not part of the SDK, but it is maintained by AWS.
lambda_runtime = "0.8"
serde_json = "1.0" 
serde = "1.0"
cached = { version = "0.46", features = ["async"] }
env_logger = "0.10"
aws-sdk-cloudwatchlogs = "0.37"
aws-config = "0.100"
aws-smithy-types = "0.100"
async-trait = "0.1"
metrics_cloudwatch_embedded = "0.4"
tracing = "0.1"
metrics = "0.21"
chrono = "0.4.31"

[dev-dependencies]
insta = { version = "1.34", features = ["filters"] }
mockall = "0.11"
ctor = "0.2"
